# cmake-play

./: .cmake-format.py  A.cxx  A.h  Aimpl.cxx  Aimpl1.cxx  Aimpl2.cxx  B.cxx  B.h  CMakeLists.txt  README.md  cmake-configure-play.sh  failing.cxx  insane.cxx  main.cxx  newA.cxx  newA.h  newLinkDef.h  oldA.cxx  oldA.h  oldLinkDef.h  passing.cxx  readNew.cxx  readOld.cxx  writeNew.cxx  writeold.cxx
cmake/: Findarrow.cmake  O2AddRootDictionary.cmake  O2DumpTargetProperties.cmake  O2GenerateRootDictionary.cmake  O2TargetRootDictionary.cmake
det/: CMakeLists.txt
det/a/: CMakeLists.txt
det/a/base/: CMakeLists.txt  a_base.cxx  a_base.h
det/a/sim/: CMakeLists.txt  a_sim.cxx  a_sim.h
fwk/core/: CMakeLists.txt  core.cxx  core.h
fwk/wflow/: CMakeLists.txt  w2.cxx
libA/: CMakeLists.txt
libA/include/: A.h
libA/src/: A.cxx  ALinkDef.h
libB/: CMakeLists.txt
libB/include/: B.h
libB/src/: B.cxx
libC/: CMakeLists.txt
libC/include/: C.h
libC/src/: C.cxx  C2.cxx  C2.h  CLinkDef.h
src/: CMakeLists.txt  play.cxx
version/: CMakeLists.txt  O2Version.h.in
